--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8">
     <title>TomBuddy</title>
 
-    <meta content="4kOnTop" property="og:title" />
-    <meta content="click on the link if u want to lose braincells" property="og:description" />
-    <meta content="https://auxy.gay/" property="og:url" />
-    <meta content="assets\images\image.png" property="og:image" />
+    <meta content="Tombuddy" property="og:title" />
+    <meta content="Epic website" property="og:description" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 
     <link href="assets/css/main.css" rel="stylesheet">
